@@ -4,32 +4,48 @@ import faang.school.postservice.client.ProjectServiceClient;
 import faang.school.postservice.client.UserServiceClient;
 import faang.school.postservice.config.context.UserContext;
 import faang.school.postservice.dto.post.PostDto;
+import faang.school.postservice.dto.post.PostViewEvent;
 import faang.school.postservice.mapper.PostMapper;
 import faang.school.postservice.model.Post;
+import faang.school.postservice.publisher.PostViewEventPublisher;
 import faang.school.postservice.repository.PostRepository;
 import feign.FeignException;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
+import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 @Log4j2
 @Service
 @RequiredArgsConstructor
 public class PostService {
 
+    @Value("${post.publish-post.batch-size}")
+    private int batchSize;
+
     private final PostRepository postRepository;
     private final PostMapper postMapper;
     private final UserServiceClient userServiceClient;
     private final ProjectServiceClient projectServiceClient;
     private final UserContext userContext;
+    private final OrthographyService orthographyService;
+    private final PostViewEventPublisher postViewEventPublisher;
+
+    private final ThreadPoolTaskExecutor threadPoolTaskExecutor;
 
     public Long createDraftPost(PostDto postDto) {
         checkAuthorIdExist(postDto.userId(), postDto.projectId());
@@ -65,14 +81,19 @@ public class PostService {
     }
 
     public PostDto getPost(Long postId) {
-        return postRepository.findById(postId)
-                .map(postMapper::toDto)
-                .orElseThrow(() -> new EntityNotFoundException("Post not found with ID: " + postId));
+        Optional<Post> optionalPost = postRepository.findById(postId);
+        if (optionalPost.isPresent()) {
+            Post post = optionalPost.get();
+            PostDto postDto = postMapper.toDto(post);
+            postViewEventPublisher.publish(new PostViewEvent(postId, post.getAuthorId(),
+                    userContext.getUserId(), LocalDateTime.now()));
+            return postDto;
+        } else throw new EntityNotFoundException("Post not found with ID: " + postId);
     }
 
     public List<PostDto> getDraftPostsForUser(Long idUser) {
         checkUserExistById(idUser);
-        return postRepository.findByAuthorIdWithLikes(idUser)
+        return postRepository.findByAuthorId(idUser)
                 .stream()
                 .filter(post -> !post.isPublished() && !post.isDeleted())
                 .sorted(Comparator.comparing(Post::getCreatedAt).reversed())
@@ -81,7 +102,6 @@ public class PostService {
     }
 
     public List<PostDto> getDraftPostsForProject(Long idProject) {
-        checkProjectExistById(idProject);
         return postRepository.findByProjectIdWithLikes(idProject)
                 .stream()
                 .filter(post -> !post.isPublished() && !post.isDeleted())
@@ -92,22 +112,92 @@ public class PostService {
 
     public List<PostDto> getPublishedPostsForUser(Long idUser) {
         checkUserExistById(idUser);
-        return postRepository.findByAuthorIdWithLikes(idUser)
+        List<Post> postList = postRepository.findByAuthorIdWithLikes(idUser)
                 .stream()
                 .filter(post -> post.isPublished() && !post.isDeleted())
                 .sorted(Comparator.comparing(Post::getPublishedAt).reversed())
-                .map(postMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
+        List<PostDto> postDtoList = postList.stream().map(postMapper::toDto)
+                .toList();
+        postList.forEach(post -> postViewEventPublisher.publish(new PostViewEvent(post.getId(),
+                post.getAuthorId(), userContext.getUserId(), LocalDateTime.now())));
+        return postDtoList;
     }
 
     public List<PostDto> getPublishedPostForProject(Long idProject) {
         checkProjectExistById(idProject);
-        return postRepository.findByProjectIdWithLikes(idProject)
+        List<Post> postList = postRepository.findByProjectIdWithLikes(idProject)
                 .stream()
                 .filter(post -> post.isPublished() && !post.isDeleted())
-                .sorted(Comparator.comparing(Post::getPublishedAt).reversed())
-                .map(postMapper::toDto)
+                .sorted(Comparator.comparing(Post::getPublishedAt).reversed()).toList();
+        List<PostDto> postDtoList = postList.stream().map(postMapper::toDto).toList();
+        postList.forEach(post -> postViewEventPublisher.publish(new PostViewEvent(post.getId(),
+                post.getAuthorId(), userContext.getUserId(), LocalDateTime.now())));
+        return postDtoList;
+    }
+
+
+    public void checkGrammarPostContentAndChangeIfNeed() {
+        List<Post> posts = getAllUnpublishedPostsOrThrow();
+        posts.forEach(post -> {
+            post.setContent(orthographyService.getCorrectContent(post.getContent(), post.getId()));
+            postRepository.save(post);
+        });
+    }
+
+    public void publishScheduledPosts() {
+        List<Post> allToPublishPosts = postRepository.findReadyToPublish();
+
+        if (allToPublishPosts.size() == 0) {
+            return;
+        }
+
+        int quantity = allToPublishPosts.size() == batchSize ? 0 : allToPublishPosts.size() / batchSize;
+        LocalDateTime now = LocalDateTime.now();
+
+        log.info("Posts publishing: batch quantity = {}", quantity + 1);
+
+        for (int i = 0; i <= quantity; i++) {
+            int fromIndex = batchSize * i;
+            int toIndex = Math.min(allToPublishPosts.size(), batchSize * (i + 1));
+
+            List<Post> readyToPublishPosts = allToPublishPosts.subList(fromIndex, toIndex);
+
+            int batchNumber = i + 1;
+            CompletableFuture
+                    .supplyAsync(() -> this.publishBatch(readyToPublishPosts, now), threadPoolTaskExecutor)
+                    .exceptionally((ex) -> {
+                        log.error("Posts publishing: batch {} has not been published, size = {}", batchNumber, readyToPublishPosts.size());
+                        return new ArrayList<>();
+                    })
+                    .thenAccept(list -> log.info("Posts publishing: batch {} has been published, size = {}", batchNumber, readyToPublishPosts.size()));
+        }
+    }
+
+    @Transactional
+    public List<Post> publishBatch(List<Post> readyToPublishPosts, LocalDateTime now) {
+        for (Post post : readyToPublishPosts) {
+            post.setPublished(true);
+            post.setPublishedAt(now);
+        }
+
+        List<Post> savedPosts = StreamSupport
+                .stream(postRepository.saveAll(readyToPublishPosts).spliterator(), false)
                 .collect(Collectors.toList());
+
+        return savedPosts;
+    }
+
+    private List<Post> getAllUnpublishedPostsOrThrow() {
+        List<Post> unpublishedPosts = StreamSupport
+                .stream(postRepository.findAll().spliterator(), false)
+                .filter(post -> !post.isPublished() && !post.isDeleted())
+                .collect(Collectors.toList());
+        if (unpublishedPosts.isEmpty()) {
+            log.error("The list of unpublished posts is null.");
+            throw new EntityNotFoundException("The list of unpublished posts is null.");
+        }
+        return unpublishedPosts;
     }
 
     private void checkIdUserAndIdProjectNotEquals(Long idUser, Long idProject) {
